Fix start time to be RFC-compliant

Fix by lftabera-at-yahoo.es

BUG: 339327